--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cra-template-ko",
-  "version": "1.0.0",
+  "version": "1.0.3-rc.1",
   "keywords": [
     "react",
     "create-react-app",
