--- a/template/package.json
+++ b/template/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cra-template-ko",
-  "version": "1.0.0",
+  "version": "1.0.3",
   "description": "Create React App 템플릿 한국어 버전입니다.",
   "scripts": {
     "start": "react-scripts start",
@@ -29,6 +29,9 @@
     "@testing-library/react": "^9.4.0",
     "@testing-library/jest-dom": "^5.1.1",
     "@testing-library/user-event": "^8.1.0",
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0",
+    "react-scripts": "^3.3.1",
     "classnames": "^2.2.6",
     "node-sass": "^4.13.1",
     "serve": "^11.3.0"
