cra-template-ko에 추가된 항목

--- a/template/jsconfig.json
+++ b/template/jsconfig.json
@@ -1,5 +1,13 @@
 {
   "compilerOptions": {
     "baseUrl": "src"
+  },
+  "include": ["src"],
+  "paths": {
+    "@assets": ["./assets/*"],
+    "@config": ["./config/*"],
+    "@components": ["./components/*"],
+    "@pages": ["./pages/*"],
+    "@styles": ["./styles/*"]
   }
 }
