--- a/template/package.json
+++ b/template/package.json
@@ -12,9 +12,10 @@
   },
   "browserslist": {
     "production": [
-      ">0.2%",
+      ">0.2% in KR",
       "not dead",
-      "not op_mini all"
+      "not op_mini all",
+      "ie > 10"
     ],
     "development": [
       "last 1 chrome version",
