--- a/template/package.json
+++ b/template/package.json
@@ -3,9 +3,9 @@
   "version": "1.0.3",
   "description": "Create React App 템플릿 한국어 버전입니다.",
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
+    "start": "craco start",
+    "build": "craco build",
+    "test": "craco test",
     "eject": "react-scripts eject",
     "serve": "serve -s build",
     "build-and-serve": "npm run build && npm run serve"
@@ -27,6 +27,7 @@
     "extends": "react-app"
   },
   "dependencies": {
+    "@craco/craco": "^5.6.3",
     "@testing-library/react": "^9.4.0",
     "@testing-library/jest-dom": "^5.1.1",
     "@testing-library/user-event": "^8.1.0",
