--- a/template/package.json
+++ b/template/package.json
@@ -34,6 +34,7 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-scripts": "^3.3.1",
+    "react-app-polyfill": "^1.0.6",
     "classnames": "^2.2.6",
     "node-sass": "^4.13.1",
     "serve": "^11.3.0"
