--- a/template/jsconfig.json
+++ b/template/jsconfig.json
@@ -1,13 +1,41 @@
 {
   "compilerOptions": {
-    "baseUrl": "src"
+    "baseUrl": "src",
+    "paths": {
+      "~/*": [
+        "./*"
+      ],
+      "@assets/*": [
+        "assets/*",
+        "assets"
+      ],
+      "@config/*": [
+        "config/*",
+        "config"
+      ],
+      "@components/*": [
+        "components/*",
+        "components"
+      ],
+      "@pages/*": [
+        "pages/*",
+        "pages"
+      ],
+      "@styles/*": [
+        "styles/*",
+        "styles"
+      ],
+      "@utils/*": [
+        "utils/*",
+        "utils"
+      ],
+      "@HOC/*": [
+        "HOC/*",
+        "HOC"
+      ]
+    }
   },
-  "include": ["src"],
-  "paths": {
-    "@assets": ["./assets/*"],
-    "@config": ["./config/*"],
-    "@components": ["./components/*"],
-    "@pages": ["./pages/*"],
-    "@styles": ["./styles/*"]
-  }
+  "include": [
+    "src"
+  ]
 }
