--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
   "name": "cra-template-ko-craco",
-  "version": "1.0.0-m.1",
+  "version": "1.0.0-m.2",
   "keywords": [
     "react",
     "create-react-app",
     "template",
     "template-ko",
     "sass",
-    "craco"
+    "craco",
+    "craco-alias"
   ],
   "author": "야무 <yamoo9@naver.com> (http://yamoo9.github.io/)",
   "description": "Create React App 템플릿 한국어 버전입니다. craco 사용자 정의 환경 구성이 포함되어 있습니다.",
