--- a/template/package.json
+++ b/template/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "cra-template-ko",
+  "name": "cra-template-ko-craco",
   "version": "1.0.3",
   "description": "Create React App 템플릿 한국어 버전입니다.",
   "scripts": {
@@ -31,6 +31,7 @@
     "@testing-library/react": "^9.4.0",
     "@testing-library/jest-dom": "^5.1.1",
     "@testing-library/user-event": "^8.1.0",
+    "craco-alias": "^2.1.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-scripts": "^3.3.1",
