api, context 별칭 등록

--- a/template/jsconfig.json
+++ b/template/jsconfig.json
@@ -5,9 +5,17 @@
       "~/*": [
         "./*"
       ],
+      "@api/*": [
+        "api/*",
+        "api"
+      ],
       "@assets/*": [
         "assets/*",
         "assets"
+      ],
+      "@context/*": [
+        "context/*",
+        "context"
       ],
       "@config/*": [
         "config/*",
