--- a/package.json
+++ b/package.json
@@ -1,17 +1,22 @@
 {
-  "name": "cra-template-ko-craco",
-  "version": "1.0.0-m.3",
+  "name": "cra-template-ko-redux",
+  "version": "1.0.0",
   "keywords": [
     "react",
     "create-react-app",
     "template",
     "template-ko",
+    "template-ko-redux",
     "sass",
     "craco",
-    "craco-alias"
+    "craco-alias",
+    "redux",
+    "react-redux",
+    "styled-components",
+    "semantic-ui-react"
   ],
   "author": "야무 <yamoo9@naver.com> (http://yamoo9.github.io/)",
-  "description": "Create React App 템플릿 한국어 버전입니다. craco 사용자 정의 환경 구성이 포함되어 있습니다.",
+  "description": "Create React App 템플릿 한국어 버전으로 따라 제작된 커스텀 템플릿 `cra-template-ko-redux` 입니다.",
   "main": "template.json",
   "repository": {
     "type": "git",
