redux-thunk 설정 추가

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cra-template-ko-redux",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "keywords": [
     "react",
     "create-react-app",
@@ -11,6 +11,7 @@
     "craco",
     "craco-alias",
     "redux",
+    "redux-thunk",
     "react-redux",
     "styled-components",
     "semantic-ui-react"
