--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cra-template-ko-redux",
-  "version": "1.0.2",
+  "version": "1.0.4",
   "keywords": [
     "react",
     "create-react-app",
@@ -13,6 +13,7 @@
     "redux",
     "redux-thunk",
     "react-redux",
+    "redux-form",
     "styled-components",
     "semantic-ui-react"
   ],
