[개선] React v17 버전 반영
업데이트 된 React v17 및 종속성 모듈, 템플릿 코드를 수정하였습니다.

--- a/template/.env.dev
+++ b/template/.env.dev
@@ -1,5 +1,5 @@
 # ---------------------------------------------
-# env 파일 이름을 .env 로 변경하여 사용합니다.
+# .env.dev 파일 이름을 .env로 변경하여 사용합니다.
 # ---------------------------------------------
 
 # Sass 경로 설정
