--- a/template/package.json
+++ b/template/package.json
@@ -1,7 +1,19 @@
 {
   "name": "cra-template-ko",
-  "version": "1.0.3",
-  "description": "Create React App 템플릿 한국어 버전입니다.",
+  "version": "1.4.0",
+  "private": true,
+  "dependencies": {
+    "@testing-library/jest-dom": "^5.11.9",
+    "@testing-library/react": "^11.2.5",
+    "@testing-library/user-event": "^12.8.1",
+    "classnames": "^2.2.6",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
+    "react-scripts": "4.0.3",
+    "sass": "^1.32.8",
+    "serve": "^11.3.2",
+    "web-vitals": "^1.1.0"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
@@ -10,11 +22,16 @@
     "serve": "serve -s build",
     "build-and-serve": "npm run build && npm run serve"
   },
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
+  },
   "browserslist": {
     "production": [
-      ">0.2% in KR",
+      ">1% in KR",
       "not dead",
-      "not op_mini all",
       "ie > 10"
     ],
     "development": [
@@ -22,19 +39,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "eslintConfig": {
-    "extends": "react-app"
-  },
-  "dependencies": {
-    "@testing-library/react": "^9.4.0",
-    "@testing-library/jest-dom": "^5.1.1",
-    "@testing-library/user-event": "^8.1.0",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
-    "react-scripts": "^3.3.1",
-    "classnames": "^2.2.6",
-    "node-sass": "^4.13.1",
-    "serve": "^11.3.0"
   }
 }
