--- a/template/.env.local
+++ b/template/.env.local
@@ -1,5 +1,5 @@
 # ---------------------------------------------
-# .env.dev 파일 이름을 .env로 변경하여 사용합니다.
+# .env.local 파일 이름을 .env로 변경하여 사용합니다.
 # ---------------------------------------------
 
 # Sass 경로 설정
