[변경] 템플릿 구성
- jsx-a11y/alt-text → jsx-a11y/no-noninteractive-element-interactions
- .env ▸ REACT_APP_NOT_USE_SECRET_KEY 추가
- jsconfig.json ▸ paths 정리
- manifest.json ▸ assets 경로 수정
- 스타일 포멧 Sass로 변경 (App만 CSS 사례로 남겨 둠)

--- a/template/jsconfig.json
+++ b/template/jsconfig.json
@@ -4,12 +4,6 @@
   },
   "include": ["src"],
   "paths": {
-    "@assets": ["./assets/*"],
-    "@styles": ["./styles/*"],
-    "@hooks": ["./hooks/*"],
-    "@utils": ["./utils/*"],
-    "@components": ["./components/*"],
-    "@container": ["./container/*"],
-    "@pages": ["./pages/*"]
+    "@components": ["./components/*"]
   }
 }
