--- a/template/.env.local
+++ b/template/.env.local
@@ -9,7 +9,9 @@ SASS_PATH=node_modules:src
 
 # 환경 변수는 전역 변수처럼 사용이 가능합니다.
 # process.env.REACT_APP_*
+REACT_APP_AUTHOR=yamoo9
+
 # ⚠️ 잠깐!
 # 환경 변수는 빌드 과정에서 임베드(embed) 되므로
 # 외부에 공개되면 안되는 보안 코드를 사용해서는 안됩니다!
-REACT_APP_AUTHOR=yamoo9
+# REACT_APP_NOT_USE_SECRET_KEY=wkiq-elkneivj1iwmc
